// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#getChildren couple of children 1`] = `
Array [
  Object {
    "idx": 0,
  },
  Object {
    "idx": 1,
  },
  Object {
    "idx": 2,
  },
  Object {
    "idx": 3,
  },
  Object {
    "idx": 4,
  },
]
`;

exports[`#getChildren empty parent 1`] = `Array []`;

exports[`#moveChildTo filled doesn't move anything (item3 to same position) 1`] = `
Array [
  1,
  2,
  3,
  4,
  5,
]
`;

exports[`#moveChildTo filled throws on indexes out of boundaries 1`] = `
Array [
  1,
  2,
  3,
  4,
  5,
]
`;

exports[`#moveChildTo filled moves item3 down 1 position 1`] = `
Array [
  1,
  3,
  2,
  4,
  5,
]
`;

exports[`#moveChildTo filled moves item3 to bottom 1`] = `
Array [
  3,
  2,
  1,
  4,
  5,
]
`;

exports[`#moveChildTo filled moves item3 to top 1`] = `
Array [
  1,
  2,
  5,
  4,
  3,
]
`;

exports[`#moveChildTo filled moves item3 up 1 position 1`] = `
Array [
  1,
  2,
  4,
  3,
  5,
]
`;

exports[`#moveChildTo with empty spaces doesn't move anything (item to same position) 1`] = `
Array [
  null,
  null,
  1,
  null,
  null,
]
`;

exports[`#moveChildTo with empty spaces throws on indexes out of boundaries 1`] = `
Array [
  null,
  null,
  1,
  null,
  null,
]
`;

exports[`#moveChildTo with empty spaces moves item down 1 position 1`] = `
Array [
  null,
  1,
  null,
  null,
  null,
]
`;

exports[`#moveChildTo with empty spaces moves item to bottom 1`] = `
Array [
  1,
  null,
  null,
  null,
  null,
]
`;

exports[`#moveChildTo with empty spaces moves item to top 1`] = `
Array [
  null,
  null,
  null,
  null,
  1,
]
`;

exports[`#moveChildTo with empty spaces moves item up 1 position 1`] = `
Array [
  null,
  null,
  null,
  1,
  null,
]
`;

exports[`#removeChild finds proper child 1`] = `
Array [
  1,
  3,
]
`;
